--- a/htdocs/phugpa.html
+++ b/htdocs/phugpa.html
@@ -57,9 +57,9 @@ Enter a year (Western calendar): <input id="year-input" name="year" size="6"> <i
 </table>
 
 <div class="after" style="margin-top:32px; line-height:1.5">
-&bull; This page is Free Software; see <a href="https://github.com/rogerespel/ewts-js/tree/main/htdocs">see for the front-end</a> , and <a href="https://gitlab.com/TibetanCalendar/TibetanDateCalcualtor">here for the calendar library</a>.
+&bull; If this page does not work, <a href="https://www.lotsawahouse.org/Cgi/phugpa.pl">please try the old version here</a>.
 
-<br>&bull; See <a href="https://www.lotsawahouse.org/Static/Calendar-Phugpa-dev.zip">here for the older Perl version of this code.</a>
+<br>&bull; This calendar code is Free Software: <a href="https://github.com/rogerespel/ewts-js/tree/main/htdocs">front-end</a>, <a href="https://gitlab.com/TibetanCalendar/TibetanDateCalcualtor">calendar library</a>, <a href="https://www.lotsawahouse.org/Static/Calendar-Phugpa-dev.zip">older Perl library.</a>
 
 <br>&bull; Calendar calculations based on <a target="_blank" href="http://www2.math.uu.se/~svante/papers/calendars/tibet.pdf"><i>Tibetan calendar mathematics</i></a> by <a target="_blank" href="https://katalog.uu.se/empInfo?id=XX2949">Svante Janson</a>.
 
