--- a/htdocs/phugpa.html
+++ b/htdocs/phugpa.html
@@ -61,6 +61,8 @@ Enter a year (Western calendar): <input id="year-input" name="year" size="6"> <i
 
 <br>&bull; This calendar code is Free Software: <a href="https://github.com/rogerespel/ewts-js/tree/main/htdocs">front-end</a>, <a href="https://gitlab.com/TibetanCalendar/TibetanDateCalcualtor">calendar library</a>, <a href="https://www.lotsawahouse.org/Static/Calendar-Phugpa-dev.zip">older Perl library.</a>
 
+<br>&bull; See <a href="https://tibetanbuddhistcalendar.org/day?utm_source=pwa">here for an interactive Tibetan calendar</a>.
+
 <br>&bull; Calendar calculations based on <a target="_blank" href="http://www2.math.uu.se/~svante/papers/calendars/tibet.pdf"><i>Tibetan calendar mathematics</i></a> by <a target="_blank" href="https://katalog.uu.se/empInfo?id=XX2949">Svante Janson</a>.
 
 <br><br><br>
