--- a/htdocs/phonetics.html
+++ b/htdocs/phonetics.html
@@ -20,12 +20,12 @@
 
 body { background: #fff }
 body, td, input, select, textarea { font-family:verdana, tahoma, helvetica; font-size: 13px; }
-.tib { font-family: "Tibetan Machine Uni"; font-size: 28px; }
+.tib { font-family: 'Jomolhari', 'Noto Serif Tibetan', 'Microsoft Himalaya', 'Tibetan Machine Uni', sans-serif; font-size: 28px }
 .warn { font-family: tahoma; font-size: 12px; }
 .eng { font-family: tahoma; font-size: 14px; }
 .after { font-size: 13px; margin-top:5px }
 .title { font-size: 18px; font-weight: bold; }
-textarea#id__txt { margin-top: 5px; margin-bottom: 5px; padding: 5px; border: 1px solid blue; height: 120px; width: 100%; font-family: fixed; font-size: 14px; }
+textarea#id__txt { margin-top: 5px; margin-bottom: 5px; padding: 5px; border: 1px solid blue; height: 120px; width: 100%; font-family: tahoma, sans-serif; font-size:16px; }
 input, select { border:1px solid #aaa; background:#fff; padding:6px; border-radius:2px; color:#333 }
 
 .head2 > div { line-height:24px; margin-top:5px }
@@ -51,7 +51,7 @@ input, select { border:1px solid #aaa; background:#fff; padding:6px; border-radi
 
 <div>Paste your Tibetan text below in Unicode or Wylie, and click "Make Phonetics" or press Ctrl+Enter.</div>
 
-<textarea id="id__txt" style="font-size: 14px;" name="input"></textarea><br>
+<textarea id="id__txt" name="input"></textarea><br>
 
 <div class="head2">
 	<div class="one">
