--- a/htdocs/phugpa.html
+++ b/htdocs/phugpa.html
@@ -18,8 +18,8 @@ h2 { font-size: 15px; }
 .tbl th { background-color: #def }
 .tbl tr.arrows .arrow { width:5%; cursor:pointer; user-select:none; -webkit-user-select: none }
 .tbl tr.arrows .notarrow { width:15% }
-.tib { font-family: Jomolhari, Tibetan Machine Uni, Himalaya; font-size:16pt; line-height:25pt; margin-bottom:0cm; margin-top:0cm; font-weight:normal; }
-.tibtit { font-family: Jomolhari, Tibetan Machine Uni, Himalaya; font-size:18pt; line-height:27pt; margin-bottom:0cm; margin-top:0cm; font-weight:normal; }
+.tib { font-family: 'Jomolhari', 'Noto Serif Tibetan', 'Microsoft Himalaya', 'Tibetan Machine Uni', sans-serif; font-size:16pt; line-height:25pt; margin-bottom:0cm; margin-top:0cm; font-weight:normal; }
+.tibtit { font-family: 'Jomolhari', 'Noto Serif Tibetan', 'Microsoft Himalaya', 'Tibetan Machine Uni', sans-serif; font-size:18pt; line-height:27pt; margin-bottom:0cm; margin-top:0cm; font-weight:normal; }
 td.mark { border-left:1px dotted #ccc; padding-left: 12px }
 input, select { border:1px solid #aaa; background:#fff; padding:6px; border-radius:2px; color:#333 }
 
